# no-more-mr-dice-guy

./: Cargo.toml  Dockerfile  renovate.json
.github/workflows/: docker-push.yml  rust.yml
src/: commands.rs  main.rs  rolls.rs
src/commands/: checks.rs  dice.rs  roles.rs
src/rolls/: options.rs  test.rs
