[package]
name = "no_more_mr_dice_guy"
version = "0.4.2"
authors = ["Luna <git@nyx.nova.fail>"]
edition = "2018"

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
rand_chacha = "0.3"
meval = "0.2"
lazy_static = "1.4"
anyhow = "1"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
regex = "1.7"
num-traits = "0.2.15"
itertools = "0.10.5"

[dependencies.serenity]
default-features = false
#features = ["framework", "standard_framework", "rustls_backend"]
features = [
    "builder",
    "client",
    "cache",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "framework",
    "standard_framework",
]
version = "0.11.5"
